Resolve flexbox wrapping issue in safari for search page.

--- a/resources/ut-tei/src/scss/tei/layout/_container.scss
+++ b/resources/ut-tei/src/scss/tei/layout/_container.scss
@@ -34,3 +34,9 @@ body {
     background-color: $white;
   }
 }
+
+@include respond(sm, md, lg, xl) {
+  main.row {
+    flex-wrap: nowrap !important;
+  }
+}
